[package]
name = "spacearth-dtn"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
config = "0.15.11"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "sdtn"
path = "src/bin/cli.rs"
