[package]
name = "sdtn"
version = "0.1.3"
authors = ["ray-gee"]
edition = "2021"
description = "SpaceArth DTN - A Rust-based implementation of Delay Tolerant Networking (DTN) for resilient communication"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Ray-Gee/spacearth-dtn"
keywords = ["dtn", "dtn7", "bundle-protocol", "rfc9171"]
categories = ["asynchronous", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
config = "0.15.11"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3.31"
btleplug = "0.11.8"
uuid = "1.17.0"

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd"] }

[[bin]]
name = "sdtn"
path = "src/bin/cli.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[example]]
name = "routing"
path = "examples/routing.rs"
